User API coupling

--- a/html/admin/courses.html
+++ b/html/admin/courses.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Danh sách khóa học</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_courses.js"></script>
+  <script type="text/javascript" src="../../js/check_session.js"></script>
+  <script type="text/javascript" src="../../js/admin.js"></script>
+  <script type="text/javascript" src="../../js/admin_courses.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
@@ -16,7 +17,7 @@
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
-          <img src="../../../images/logo_admin.png" alt="Cool Admin">
+          <img src="../../images/logo_admin.png" alt="Cool Admin">
         </a>
       </div>
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
@@ -84,7 +85,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Michelle Moreno">
+                          <img src="../../images/avatar-06.jpg" alt="Michelle Moreno">
                         </div>
                         <div class="content">
                           <h6>Michelle Moreno</h6>
@@ -94,7 +95,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Diane Myers">
+                          <img src="../../images/avatar-04.jpg" alt="Diane Myers">
                         </div>
                         <div class="content">
                           <h6>Diane Myers</h6>
@@ -116,7 +117,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-06.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -125,7 +126,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-05.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-05.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -134,7 +135,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-04.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -189,7 +190,7 @@
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
                     <div class="image">
-                      <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                      <img src="../../images/avatar-01.jpg" alt="John Doe">
                     </div>
                     <div class="content">
                       <a class="js-acc-btn" href="#">john doe</a>
@@ -199,7 +200,7 @@
                       <div class="info clearfix">
                         <div class="image">
                           <a href="#">
-                            <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                            <img src="../../images/avatar-01.jpg" alt="John Doe">
                           </a>
                         </div>
                         <div class="content">
@@ -222,7 +223,7 @@
                         </div>
                       </div>
                       <div class="account-dropdown__footer">
-                        <a href="#">
+                        <a href="#" id="admin-logout">
                           <i class="fas fa-power-off"></i>Logout
                         </a>
                       </div>
