--- a/html/admin/users.html
+++ b/html/admin/users.html
@@ -3,20 +3,20 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Danh sách khóa học</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <title>Danh sách người dùng</title>
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_subjects.js"></script>
-  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+  <script type="text/javascript" src="../../js/check_session.js"></script>
+  <script type="text/javascript" src="../../js/admin.js"></script>
+  <script type="text/javascript" src="../../js/admin_users.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
-          <img src="../../../images/logo_admin.png" alt="Cool Admin">
+          <img src="../../images/logo_admin.png" alt="Cool Admin">
         </a>
       </div>
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
@@ -27,13 +27,13 @@
                 <i class="fas fa-tachometer-alt"></i>Dashboard
               </a>
             </li>
-            <li>
-              <a href="users.html">
+            <li class="active">
+              <a href="">
                 <i class="fas fa-users"></i>Users
               </a>
             </li>
-            <li class="active">
-              <a href="">
+            <li>
+              <a href="subjects.html">
                 <i class="fas fa-table"></i>Subjects
               </a>
             </li>
@@ -84,7 +84,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Michelle Moreno">
+                          <img src="../../images/avatar-06.jpg" alt="Michelle Moreno">
                         </div>
                         <div class="content">
                           <h6>Michelle Moreno</h6>
@@ -94,7 +94,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Diane Myers">
+                          <img src="../../images/avatar-04.jpg" alt="Diane Myers">
                         </div>
                         <div class="content">
                           <h6>Diane Myers</h6>
@@ -116,7 +116,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-06.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -125,7 +125,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-05.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-05.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -134,7 +134,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-04.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -189,7 +189,7 @@
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
                     <div class="image">
-                      <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                      <img src="../../images/avatar-01.jpg" alt="John Doe">
                     </div>
                     <div class="content">
                       <a class="js-acc-btn" href="#">john doe</a>
@@ -199,7 +199,7 @@
                       <div class="info clearfix">
                         <div class="image">
                           <a href="#">
-                            <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                            <img src="../../images/avatar-01.jpg" alt="John Doe">
                           </a>
                         </div>
                         <div class="content">
@@ -222,7 +222,7 @@
                         </div>
                       </div>
                       <div class="account-dropdown__footer">
-                        <a href="#">
+                        <a href="#" id="admin-logout">
                           <i class="fas fa-power-off"></i>Logout
                         </a>
                       </div>
@@ -239,7 +239,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <h3 class="title-5 m-b-35">Courses Table</h3>
+                <h3 class="title-5 m-b-35">Users Table</h3>
                 <div class="table-data__tool">
                   <div class="table-data__tool-left">
                     <div class="rs-select2--light rs-select2--md">
@@ -259,37 +259,40 @@
                       <div class="dropDownSelect2"></div>
                     </div>
                     <button class="au-btn-filter">
-                      <i class="fas fa-sort-amount-down"></i>filters
-                    </button>
-                  </div>
-                  <div class="table-data__tool-right">
-                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newsj-modal">
-                      <i class="fas fa-plus"></i>add subject
-                    </button>
-                    <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
-                      <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
-                        <option selected="selected">Export</option>
-                        <option value="">Option 1</option>
-                        <option value="">Option 2</option>
-                      </select>
-                      <div class="dropDownSelect2"></div>
+                      <i class="fas fa-sort-amount-down"></i>filters</button>
+                    </div>
+                    <div class="table-data__tool-right">
+                      <button class="au-btn au-btn-icon au-btn--green au-btn--small">
+                        <i class="fas fa-plus"></i>add user
+                      </button>
+                      <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
+                        <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
+                          <option selected="selected">Export</option>
+                          <option value="">Option 1</option>
+                          <option value="">Option 2</option>
+                        </select>
+                        <div class="dropDownSelect2"></div>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="table-responsive table-responsive-data2">
-                  <table class="table table-data2">
-                    <thead>
-                      <tr>
-                        <th class="courses-column-1">No</th>
-                        <th class="courses-column-2">Subject Name</th>
-                        <th class="courses-column-3">Description</th>
-                        <th class="courses-column-4">Status</th>
-                        <th class="courses-column-5"></th>
-                      </tr>
-                    </thead>
-                    <tbody id="subjects-table-content">
-                    </tbody>
-                  </table>
+                  <div class="table-responsive table-responsive-data2">
+                    <table class="table table-data2">
+                      <thead>
+                        <tr>
+                          <th class="users-column-1">STT</th>
+                          <th class="users-column-2">Name</th>
+                          <th class="users-column-3">Username</th>
+                          <th class="users-column-4">Password</th>
+                          <th class="users-column-5">Email</th>
+                          <th class="users-column-6">Phone number</th>
+                          <th class="users-column-7">Address</th>
+                          <th class="users-column-8"></th>
+                        </tr>
+                      </thead>
+                      <tbody id="users-table-content">
+                      </tbody>
+                    </table>
+                  </div>
                 </div>
               </div>
             </div>
@@ -297,63 +300,5 @@
         </div>
       </div>
     </div>
-  </div>
-  <div class="modal fade" id="new-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" id="new-subject-form">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new subject</h5>
-            <button type="button" class="close close-newsj-modal-btn" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="new-name" class=" form-control-label">Subject Name</label>
-              <input type="text" id="new-subject-name" name="new-name" placeholder="Subject name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="new-description" class=" form-control-label">Description</label>
-              <input type="text" id="new-description" name="new-description" placeholder="Description" class="form-control">
-            </div>
-
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-newsj-modal-btn" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-  <div class="modal fade" id="update-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="update-subject-form">
-      <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Update subject</h5>
-            <button type="button" class="close close-updatesj-modal-btn" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">×</span>
-            </button>
-          </div>
-          <div class="modal-body">
-            <div class="form-group">
-              <label for="update-name" class=" form-control-label">Subject Name</label>
-              <input type="text" id="update-subject-name" name="update-name" placeholder="Subject name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="update-description" class=" form-control-label">Description</label>
-              <input type="text" id="update-description" name="update-description" placeholder="Description" class="form-control">
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-updatesj-modal-btn" data-dismiss="modal">Cancel</button>
-            <button type="submit" class="btn btn-primary">Confirm</button>
-          </div>
-        </div>
-      </div>
-    </form>
-  </div>
-</body>
-</html>
+  </body>
+  </html>
