--- a/html/admin/lessons.html
+++ b/html/admin/lessons.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Danh sách khóa học</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_exams.js"></script>
+  <script type="text/javascript" src="../../js/check_session.js"></script>
+  <script type="text/javascript" src="../../js/admin.js"></script>
+  <script type="text/javascript" src="../../js/admin_lessons.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
@@ -16,7 +17,7 @@
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
-          <img src="../../../images/logo_admin.png" alt="Cool Admin">
+          <img src="../../images/logo_admin.png" alt="Cool Admin">
         </a>
       </div>
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
@@ -42,13 +43,13 @@
                 <i class="fas fa-book"></i>Courses
               </a>
             </li>
-            <li>
-              <a href="lessons.html">
+            <li class="active">
+              <a href="">
                 <i class="fas fa-book-open"></i>Lessons
               </a>
             </li>
-            <li class="active">
-              <a href="">
+            <li>
+              <a href="exams.html">
                 <i class="fas fa-file-alt"></i>Exams
               </a>
             </li>
@@ -84,7 +85,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Michelle Moreno">
+                          <img src="../../images/avatar-06.jpg" alt="Michelle Moreno">
                         </div>
                         <div class="content">
                           <h6>Michelle Moreno</h6>
@@ -94,7 +95,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Diane Myers">
+                          <img src="../../images/avatar-04.jpg" alt="Diane Myers">
                         </div>
                         <div class="content">
                           <h6>Diane Myers</h6>
@@ -116,7 +117,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-06.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -125,7 +126,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-05.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-05.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -134,7 +135,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-04.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -189,7 +190,7 @@
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
                     <div class="image">
-                      <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                      <img src="../../images/avatar-01.jpg" alt="John Doe">
                     </div>
                     <div class="content">
                       <a class="js-acc-btn" href="#">john doe</a>
@@ -199,7 +200,7 @@
                       <div class="info clearfix">
                         <div class="image">
                           <a href="#">
-                            <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                            <img src="../../images/avatar-01.jpg" alt="John Doe">
                           </a>
                         </div>
                         <div class="content">
@@ -222,7 +223,7 @@
                         </div>
                       </div>
                       <div class="account-dropdown__footer">
-                        <a href="#">
+                        <a href="#" id="admin-logout">
                           <i class="fas fa-power-off"></i>Logout
                         </a>
                       </div>
@@ -263,6 +264,9 @@
                     </button>
                   </div>
                   <div class="table-data__tool-right">
+                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newls-modal">
+                      <i class="fas fa-plus"></i>add lesson
+                    </button>
                     <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
                       <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
                         <option selected="selected">Export</option>
@@ -278,12 +282,17 @@
                     <thead>
                       <tr>
                         <th class="courses-column-1">No</th>
-                        <th class="courses-column-2">Course</th>
-                        <th class="courses-column-3">Number questions</th>
-                        <th class="courses-column-5"></th>
+                        <th class="courses-column-2">Lesson Name</th>
+                        <th class="courses-column-3">Course</th>
+                        <th class="courses-column-4">Description</th>
+                        <th class="courses-column-5">Time Start</th>
+                        <th class="courses-column-6">Stream URL</th>
+                        <th class="courses-column-7">Off URL</th>
+                        <th class="courses-column-8">Status</th>
+                        <th class="courses-column-9"></th>
                       </tr>
                     </thead>
-                    <tbody id="exams-table-content">
+                    <tbody id="lessons-table-content">
                     </tbody>
                   </table>
                 </div>
@@ -294,58 +303,86 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="exam-details-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" padding-left: 17px;">
-    <div class="modal-dialog modal-lg" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="modal-label">Questions list</h5>
-          <button type="button" class="close close-exam-details-modal-btn" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">×</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div id="questions-list">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary close-exam-details-modal-btn" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn add-question-btn" id="btn-add-ques"><i class="fa fa-plus"></i> Thêm câu hỏi</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="modal fade" id="add-question-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="new-question-form">
+  <div class="modal fade" id="new-lesson-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="new-lesson-form">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new question</h5>
-            <button type="button" class="close close-addques-modal-btn" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Create new lesson</h5>
+            <button type="button" class="close close-newls-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
           <div class="modal-body">
-            <div id="new-question-block" class="quizitem normal open">
-              <div class="quizitem-body show">
-                <div class="form-row">
-                  <div class="lb">Nội dung câu hỏi</div>
-                  <textarea class="form-control" id="new-quiz-content-input" placeholder="Nội dung của câu hỏi." rows="10" maxlength="800" required="" oninvalid="checkVisible(this)"></textarea>
-                </div>
-                <div class="form-row answer-wrap">
-                  <div class="lb clear">Câu trả lời </div>
-                  <ul class="new-ques-answer-list"></ul>
-                    <a href="javascript:;" class=" btn btn-danger btn-new-quiz-que-add" data-guid="lmdw"><i class="fa fa-plus"></i>Thêm câu trả lời</a>
-                  </div>
-                </div>
-              </div>
+            <div class="form-group">
+              <label class="form-control-label">Course Name</label>
+              <select id="newls-course-id" class="form-control">
+              </select>
             </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary close-addques-modal-btn" data-dismiss="modal">Cancel</button>
-              <button type="submit" class="btn btn-primary">Confirm</button>
+            <div class="form-group">
+              <label for="newls-name" class="form-control-label">Lesson Name</label>
+              <input type="text" id="new-lesson-name" name="newls-name" placeholder="Lesson name" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="newls-description" class="form-control-label">Description</label>
+              <input type="text" id="new-description" name="newls-description" placeholder="Description" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="start-time" class="form-control-label">Time start</label>
+              <input type="datetime-local" class="form-control" id="newls-start-time" name="start-time"  required>
             </div>
           </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary close-newls-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Confirm</button>
+          </div>
         </div>
-      </form>
-    </div>
-  </body>
-  </html>
+      </div>
+    </form>
+  </div>
+  <div class="modal fade" id="update-lesson-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="update-lesson-form">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-label">Update lesson</h5>
+            <button type="button" class="close close-updatels-modal-btn" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="form-group">
+              <label class="form-control-label">Course Name</label>
+              <input type="text" id="update-lesson-course" name="updatels-course" placeholder="Subject name" class="form-control" readonly>
+            </div>
+            <div class="form-group">
+              <label for="updatels-name" class="form-control-label">Lesson Name</label>
+              <input type="text" id="update-lesson-name" name="updatels-name" placeholder="Course name" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updatels-description" class="form-control-label">Description</label>
+              <input type="text" id="update-description" name="updatels-description" placeholder="Description" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updatels-starttime" class="form-control-label">Time start</label>
+              <input type="datetime-local" class="form-control" id="update-start-time" name="updatels-starttime"required>
+            </div>
+            <div class="form-group">
+              <label for="updatels-streamurl" class="form-control-label">Stream URL</label>
+              <input type="text" id="update-streamurl" name="updatels-streamurl" placeholder="Description" class="form-control">
+            </div>
+            <div class="form-group">
+              <label for="updatels-offliveurl" class="form-control-label">Offline URL</label>
+              <input type="text" id="update-offliveurl" name="updatels-offliveurl" placeholder="Description" class="form-control">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary close-updatels-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="submit" class="btn btn-primary">Confirm</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</body>
+</html>
