--- a/html/admin/login.html
+++ b/html/admin/login.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Đăng nhập</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin_login.js"></script>
+  <script type="text/javascript" src="../../js/admin_login.js"></script>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
@@ -16,7 +17,7 @@
         <div class="login-content">
           <div class="login-logo">
             <a href="#">
-              <img src="../../../images/logo_admin.png" alt="CoolAdmin">
+              <img src="../../images/logo_admin.png" alt="CoolAdmin">
             </a>
           </div>
           <div class="login-form">
