--- a/html/admin/signup.html
+++ b/html/admin/signup.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Danh sách khóa học</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin_signup.js"></script>
+  <script type="text/javascript" src="../../js/admin_signup.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
   <div class="page-wrapper">
@@ -16,7 +16,7 @@
         <div class="login-content">
           <div class="login-logo">
             <a href="#">
-              <img src="../../../images/logo_admin.png" alt="SPSLOAdmin">
+              <img src="../../images/logo_admin.png" alt="SPSLOAdmin">
             </a>
           </div>
           <div class="alert" id="sign-up-alert" role="alert">
@@ -37,7 +37,7 @@
               </div>
               <div class="form-group">
                 <label class="password-confirm-label">Password Confirm</label>
-                <span id='password-confirm-message'></span>
+                <span class="confirm-message" id='password-confirm-message'></span>
                 <input class="au-input au-input--full" required="true" id="password-confirm" type="password" name="password_confirm" placeholder="Password Confirm">
               </div>
               <div class="login-checkbox">
