--- a/html/admin/subjects.html
+++ b/html/admin/subjects.html
@@ -4,11 +4,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Danh sách khóa học</title>
-  <link rel="stylesheet" type="text/css" href="../../../css/style.css">
-  <link href="../../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../css/style.css">
+  <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../../js/admin.js"></script>
-  <script type="text/javascript" src="../../../js/admin_lessons.js"></script>
+  <script type="text/javascript" src="../../js/check_session.js"></script>
+  <script type="text/javascript" src="../../js/admin.js"></script>
+  <script type="text/javascript" src="../../js/admin_subjects.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 </head>
 <body class="animsition" style="animation-duration: 900ms; opacity: 1;">
@@ -16,7 +17,7 @@
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
-          <img src="../../../images/logo_admin.png" alt="Cool Admin">
+          <img src="../../images/logo_admin.png" alt="Cool Admin">
         </a>
       </div>
       <div class="menu-sidebar__content js-scrollbar1 ps ps--active-y">
@@ -32,8 +33,8 @@
                 <i class="fas fa-users"></i>Users
               </a>
             </li>
-            <li>
-              <a href="subjects.html">
+            <li class="active">
+              <a href="">
                 <i class="fas fa-table"></i>Subjects
               </a>
             </li>
@@ -42,8 +43,8 @@
                 <i class="fas fa-book"></i>Courses
               </a>
             </li>
-            <li class="active">
-              <a href="">
+            <li>
+              <a href="lessons.html">
                 <i class="fas fa-book-open"></i>Lessons
               </a>
             </li>
@@ -84,7 +85,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Michelle Moreno">
+                          <img src="../../images/avatar-06.jpg" alt="Michelle Moreno">
                         </div>
                         <div class="content">
                           <h6>Michelle Moreno</h6>
@@ -94,7 +95,7 @@
                       </div>
                       <div class="mess__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Diane Myers">
+                          <img src="../../images/avatar-04.jpg" alt="Diane Myers">
                         </div>
                         <div class="content">
                           <h6>Diane Myers</h6>
@@ -116,7 +117,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-06.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-06.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -125,7 +126,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-05.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-05.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -134,7 +135,7 @@
                       </div>
                       <div class="email__item">
                         <div class="image img-cir img-40">
-                          <img src="../../../images/avatar-04.jpg" alt="Cynthia Harvey">
+                          <img src="../../images/avatar-04.jpg" alt="Cynthia Harvey">
                         </div>
                         <div class="content">
                           <p>Meeting about new dashboard...</p>
@@ -189,7 +190,7 @@
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
                     <div class="image">
-                      <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                      <img src="../../images/avatar-01.jpg" alt="John Doe">
                     </div>
                     <div class="content">
                       <a class="js-acc-btn" href="#">john doe</a>
@@ -199,7 +200,7 @@
                       <div class="info clearfix">
                         <div class="image">
                           <a href="#">
-                            <img src="../../../images/avatar-01.jpg" alt="John Doe">
+                            <img src="../../images/avatar-01.jpg" alt="John Doe">
                           </a>
                         </div>
                         <div class="content">
@@ -222,7 +223,7 @@
                         </div>
                       </div>
                       <div class="account-dropdown__footer">
-                        <a href="#">
+                        <a href="#" id="admin-logout">
                           <i class="fas fa-power-off"></i>Logout
                         </a>
                       </div>
@@ -263,8 +264,8 @@
                     </button>
                   </div>
                   <div class="table-data__tool-right">
-                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newls-modal">
-                      <i class="fas fa-plus"></i>add lesson
+                    <button class="au-btn au-btn-icon au-btn--green au-btn--small" id="open-newsj-modal">
+                      <i class="fas fa-plus"></i>add subject
                     </button>
                     <div class="rs-select2--dark rs-select2--sm rs-select2--dark2">
                       <select class="export-select" name="type" tabindex="-1" aria-hidden="true">
@@ -281,14 +282,13 @@
                     <thead>
                       <tr>
                         <th class="courses-column-1">No</th>
-                        <th class="courses-column-2">Lesson Name</th>
-                        <th class="courses-column-3">Course</th>
-                        <th class="courses-column-4">Description</th>
-                        <th class="courses-column-5">Status</th>
-                        <th class="courses-column-6"></th>
+                        <th class="courses-column-2">Subject Name</th>
+                        <th class="courses-column-3">Description</th>
+                        <th class="courses-column-4">Status</th>
+                        <th class="courses-column-5"></th>
                       </tr>
                     </thead>
-                    <tbody id="lessons-table-content">
+                    <tbody id="subjects-table-content">
                     </tbody>
                   </table>
                 </div>
@@ -299,65 +299,57 @@
       </div>
     </div>
   </div>
-  <div class="modal fade" id="new-lesson-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="new-lesson-form">
+  <div class="modal fade" id="new-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" id="new-subject-form">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Create new lesson</h5>
-            <button type="button" class="close close-newls-modal-btn" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Create new subject</h5>
+            <button type="button" class="close close-newsj-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label class="form-control-label">Course Name</label>
-              <select id="newle-course-id" class="form-control">
-              </select>
+              <label for="new-name" class=" form-control-label">Subject Name</label>
+              <input type="text" id="new-subject-name" name="new-name" placeholder="Subject name" class="form-control">
             </div>
             <div class="form-group">
-              <label for="newls-name" class="form-control-label">Course Name</label>
-              <input type="text" id="new-lesson-name" name="newls-name" placeholder="Course name" class="form-control">
+              <label for="new-description" class=" form-control-label">Description</label>
+              <input type="text" id="new-description" name="new-description" placeholder="Description" class="form-control">
             </div>
-            <div class="form-group">
-              <label for="newls-description" class="form-control-label">Description</label>
-              <input type="text" id="new-description" name="newls-description" placeholder="Description" class="form-control">
-            </div>
+
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-newls-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-secondary close-newsj-modal-btn" data-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-primary">Confirm</button>
           </div>
         </div>
       </div>
     </form>
   </div>
-  <div class="modal fade" id="update-lesson-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
-    <form action="" method="post" class="" id="update-lesson-form">
+  <div class="modal fade" id="update-subject-modal" tabindex="-1" role="dialog" aria-labelledby="mediumModalLabel" style="display: none; padding-left: 17px;">
+    <form action="" method="post" class="" id="update-subject-form">
       <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="modal-label">Update lesson</h5>
-            <button type="button" class="close close-updatels-modal-btn" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title" id="modal-label">Update subject</h5>
+            <button type="button" class="close close-updatesj-modal-btn" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">×</span>
             </button>
           </div>
           <div class="modal-body">
             <div class="form-group">
-              <label class="form-control-label">Course Name</label>
-              <input type="text" id="update-lesson-course" name="updatels-course" placeholder="Subject name" class="form-control" readonly>
+              <label for="update-name" class=" form-control-label">Subject Name</label>
+              <input type="text" id="update-subject-name" name="update-name" placeholder="Subject name" class="form-control">
             </div>
             <div class="form-group">
-              <label for="updatels-name" class="form-control-label">Lesson Name</label>
-              <input type="text" id="update-lesson-name" name="updatels-name" placeholder="Course name" class="form-control">
-            </div>
-            <div class="form-group">
-              <label for="newls-description" class="form-control-label">Description</label>
-              <input type="text" id="update-description" name="updatels-description" placeholder="Description" class="form-control">
+              <label for="update-description" class=" form-control-label">Description</label>
+              <input type="text" id="update-description" name="update-description" placeholder="Description" class="form-control">
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary close-updatels-modal-btn" data-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-secondary close-updatesj-modal-btn" data-dismiss="modal">Cancel</button>
             <button type="submit" class="btn btn-primary">Confirm</button>
           </div>
         </div>
