--- a/html/users/course_detail.html
+++ b/html/users/course_detail.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script type="text/javascript" src="../../js/check_user_session.js"></script>
+  <script type="text/javascript" src="../../js/check_user.js"></script>
+  <script type="text/javascript" src="../../js/user.js"></script>
   <script type="text/javascript" src="../../js/course_detail.js"></script>
 <!--   <script>
     $(document).ready(function(){
@@ -23,7 +26,7 @@
           <div class="row col-width-lg">
             <div class="col-lg-2 col-md-2 col-sm-2 cate-md">
               <div class="unica-menu-cate">
-                <a href="../static_pages/home.html">
+                <a href="home.html">
                   <img src="../../images/logo.png">
                 </a>
               </div>
@@ -37,9 +40,7 @@
               </form>
             </div>
             <div class="col-lg-5 col-md-4 col-sm-5 cate-sm">
-              <ul class="unica-acc-zone">
-                <li><a class="unica-reg-acc" href="/login">Đăng nhập</a></li>
-                <li><a class="unica-log-acc" href="/register">Đăng ký</a></li>
+              <ul class="unica-acc-zone" id="user-account-zone">
               </ul>
             </div>
           </div>
@@ -122,7 +123,7 @@
               <div class="u-intro tab-content" id="u-course-intro">
                 <div class="u-video">
                   <div class="embed-responsive embed-responsive-16by9">
-                    <iframe style="width: 1000px; height: 600px;" src="https://zoom.us/wc/9250167460/join?prefer=1" sandbox="allow-forms allow-scripts" allow="microphone; camera"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oWk5jHc4Ztk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                   </div>
                 </div>
                 <div class="u-learn-what">
@@ -217,7 +218,7 @@
                     <h2 id="lesson-name"></h2>
                     <p id="lesson-description"></p>
                   </div>
-                  <iframe id="lesson-video-frame" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <iframe id="lesson-video-frame" width="100%" height="500px" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
               <div class="u-course-test tab-content" id="u-course-test">
