--- a/html/users/login.html
+++ b/html/users/login.html
@@ -17,7 +17,7 @@
           <div class="row col-width-lg">
             <div class="col-lg-2 col-md-2 col-sm-2 cate-md">
               <div class="unica-menu-cate">
-                <a href="../static_pages/home.html">
+                <a href="home.html">
                   <img src="../../images/logo.png">
                 </a>
               </div>
@@ -32,8 +32,8 @@
             </div>
             <div class="col-lg-5 col-md-4 col-sm-5 cate-sm">
               <ul class="unica-acc-zone">
-                <li><a class="unica-reg-acc" href="/login">Đăng nhập</a></li>
-                <li><a class="unica-log-acc" href="/register">Đăng ký</a></li>
+                <li><a class="unica-reg-acc" href="">Đăng nhập</a></li>
+                <li><a class="unica-log-acc" href="signup.html">Đăng ký</a></li>
               </ul>
             </div>
           </div>
@@ -75,7 +75,7 @@
                   </label>
                 </div>
                 <div class="forgetpass">
-                  <a href="forgot_password.php">
+                  <a href="reset_password.html">
                     Quên mật khẩu?
                   </a>
                 </div>
