--- a/html/users/reset_password.html
+++ b/html/users/reset_password.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Đăng nhập</title>
+  <title>Đổi mật khẩu</title>
   <link rel="stylesheet" type="text/css" href="../../css/user.css">
   <link href="../../fontawesome-free-5.13.0-web/css/all.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script type="text/javascript" src="../../js/user_signup.js"></script>
+  <script type="text/javascript" src="../../js/user.js"></script>
+  <script type="text/javascript" src="../../js/reset_password.js"></script>
 </head>
 <body>
   <header>
@@ -33,7 +34,7 @@
             <div class="col-lg-5 col-md-4 col-sm-5 cate-sm">
               <ul class="unica-acc-zone">
                 <li><a class="unica-reg-acc" href="login.html">Đăng nhập</a></li>
-                <li><a class="unica-log-acc" href="">Đăng ký</a></li>
+                <li><a class="unica-log-acc" href="signup.html">Đăng ký</a></li>
               </ul>
             </div>
           </div>
@@ -41,56 +42,29 @@
       </div>
     </div>
   </header>
-  <div class="container">
-    <div class="login-wrap">
-      <div class="loginpage-left-banner">
-        <img src="../../images/login-left-banner.png" alt="" class="img-responsive loginpage-left-banner__img">
-      </div>
-      <div class="loginpage-form">
-        <form action="" id="user-signup-form" method="post">
-          <div class="loginpage-form-wrap form-login">
-            <h3 class="text-center loginpage-form__title">Đăng ký</h3>
-            <div class="alert" id="user-signup-alert" role="alert">
+  <div class="hidden-xs" style="margin-top: 62px;"></div>
+  <main>
+    <div class="container-fluid bg-br" style="padding:15px 0">
+      <div class="container">
+        <div class="resetpass-wrap">
+          <div class="resetpass-content">
+            <div class="resetpass-title">
+              Cấp lại mật khẩu
             </div>
-            <div>
-              <div class="user-role">
-                <label class="radio-inline">
-                  <input type="radio" name="userrole" checked>Học viên
-                </label>
-                <label class="radio-inline">
-                  <input type="radio" name="userrole">Giáo viên
-                </label>
-              </div>
-              <div class="form-group">
-                <input name="username" id="username" placeholder="Tên đăng nhập" type="text" class="form-control loginpage-form__input">
-              </div>
-              <div class="form-group">
-                <input name="email" id="email" placeholder="Email" type="email" class="form-control loginpage-form__input">
-              </div>
-              <div class="form-group has-eye">
-                <input id="password" type="password" placeholder="Mật khẩu" class="form-control loginpage-form__input">
-                <div class="eye">
-                  <img src="../../images/ic_eye0.png" alt="" class="img-responsive">
+            <div class="resetpass-form">
+              <form action="" method="post" id="reset-password-form">
+                <div class="form-group">
+                  <label>Nhập địa chỉ email để nhận mất khẩu mới</label>
+                  <input class="resetpass-email" type="email" name="email" placeholder="Email">
                 </div>
-              </div>
-              <div class="form-group has-eye">
-                <input id="password-confirm" type="password" placeholder="Nhập lại mật khẩu" class="form-control loginpage-form__input">
-                <div class="eye">
-                  <img src="../../images/ic_eye0.png" alt="" class="img-responsive">
-                </div>
-                <span class="confirm-message" id='password-confirm-message'></span>
-              </div>
-              <div style="margin-bottom: 15px;">
-                <div id="recaptcha-loginForm">
-                </div>
-              </div>
-              <button type="submit" class="btn loginpage-form__button-submit">Đăng ký</button>
+                <button class="resetpass-btn" type="submit">submit</button>
+              </form>
             </div>
           </div>
-        </form>
+        </div>
       </div>
     </div>
-  </div>
+  </main>
   <footer>
     <div id="footer2">
       <div class="container">
